# Reflow

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
res/: reflow.rc
src/: main.cpp
src/core/: reflow.h
src/mesh/: mesh.cpp  mesh.h
src/renderer/: camera.cpp  camera.h  grid.cpp  grid.h  shader.cpp  shader.h
src/ui/: ui.cpp  ui.h
